fix:Align layout and features of 'Search' pane with rest of the web client.

--- a/mopidy_musicbox_webclient/static/css/webclient.css
+++ b/mopidy_musicbox_webclient/static/css/webclient.css
@@ -205,7 +205,15 @@
     background-color: #fff;
 }
 
-#searchresults {
+#searchartists {
+    display: none;
+}
+
+#searchalbums {
+    display: none;
+}
+
+#searchtracks {
     display: none;
 }
 
